Finish subscribe and fix some dark mode bugs

--- a/assets/less/misc/dark.less
+++ b/assets/less/misc/dark.less
@@ -36,15 +36,18 @@
   .page-number,
   .author-location,
   .author-social-item,
-  .button-arrow-icon {
+  .button-arrow-icon,
+  .subscribe-message {
     color: @dark-mode-secondary-text-color;
   }
 
-  .post-footer {
+  .post-footer,
+  .page-number {
     border-color: @dark-mode-border-color;
   }
 
   .comment-container,
+  .subscribe,
   .u-placeholder {
     background-color: darken(@dark-mode-bg-color, 3%);
   }
